# telegram-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/create_auth_key/: Cargo.toml
examples/create_auth_key/src/: main.rs
telegram/: Cargo.toml  build.rs
telegram/src/: client.rs  error.rs  lib.rs  main.rs  request.rs  ser.rs
telegram_codegen/: Cargo.toml
telegram_codegen/src/: error.rs  generator.rs  lib.rs  parser.rs
telegram_derive/: Cargo.toml
telegram_derive/src/: lib.rs
