[package]
name = "telegram"
version = "0.1.0-pre"
description = "Unofficial Telegram API Library"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
workspace = "../"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.9.0"
telegram_derive = { path = "../telegram_derive" }

[build-dependencies]
telegram_codegen = { path = "../telegram_codegen" }
