[package]
name = "telegram"
version = "0.1.0"
description = "Unofficial Telegram API Library"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
workspace = "../"
license = "MIT/Apache-2.0"
homepage = "https://github.com/mehcode/telegram-rs"
documentation = "https://docs.rs/telegram"
repository = "https://github.com/mehcode/telegram-rs"

[dependencies]
byteorder = "1.1.0"
error-chain = "0.10.0"
extprim = "1.4.0"
telegram_derive = "0.1.0"

[build-dependencies]
telegram_codegen = "0.1.0"
