[package]
name = "telegram_codegen"
version = "0.1.0"
description = "Generate type definitions and methods for the Unofficial Telegram API Library from the official JSON documents."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
workspace = "../"
license = "MIT/Apache-2.0"
homepage = "https://github.com/mehcode/telegram-rs"
documentation = "https://docs.rs/telegram_codegen"
repository = "https://github.com/mehcode/telegram-rs"

[dependencies]
error-chain = "0.9.0"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"
