[package]
name = "telegram_derive"
version = "0.1.0"
description="Procedural derive macros for the Unofficial Telegram API Library."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
workspace = "../"
license = "MIT/Apache-2.0"
homepage = "https://github.com/mehcode/telegram-rs"
documentation = "https://docs.rs/telegram_derive"
repository = "https://github.com/mehcode/telegram-rs"

[lib]
proc-macro = true

[dependencies]
syn = "0.10.5"
quote = "0.3.10"
